syntax = "proto3";

package c1.reader.v2;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/conductorone/baton-sdk/pb/c1/reader/v2";

message SyncRun {
  string id = 1;
  google.protobuf.Timestamp started_at = 2;
  google.protobuf.Timestamp ended_at = 3;
  string sync_token = 4;
  string sync_type = 5;
  string parent_sync_id = 6;
}

service SyncsReaderService {
  rpc GetSync(SyncsReaderServiceGetSyncRequest) returns (SyncsReaderServiceGetSyncResponse);
  rpc ListSyncs(SyncsReaderServiceListSyncsRequest) returns (SyncsReaderServiceListSyncsResponse);
  rpc GetLatestFinishedSync(SyncsReaderServiceGetLatestFinishedSyncRequest) returns (SyncsReaderServiceGetLatestFinishedSyncResponse);
}

message SyncsReaderServiceGetSyncRequest {
  string sync_id = 1;
  repeated google.protobuf.Any annotations = 2;
}

message SyncsReaderServiceGetSyncResponse {
  SyncRun sync = 1;
  repeated google.protobuf.Any annotations = 2;
}

message SyncsReaderServiceListSyncsRequest {
  uint32 page_size = 1 [(buf.validate.field).uint32 = {
    lte: 250
  }, (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE];
  string page_token = 2 [(buf.validate.field).string = {
    min_bytes: 1
    max_bytes: 2048
  }, (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE];
  repeated google.protobuf.Any annotations = 3;
}

message SyncsReaderServiceListSyncsResponse {
  repeated SyncRun syncs = 1;
  string next_page_token = 2 [(buf.validate.field).string = {
    min_bytes: 1
    max_bytes: 2048
  }, (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE];
  repeated google.protobuf.Any annotations = 3;
}

message SyncsReaderServiceGetLatestFinishedSyncRequest {
  repeated google.protobuf.Any annotations = 1;
  string sync_type = 2;
}

message SyncsReaderServiceGetLatestFinishedSyncResponse {
  SyncRun sync = 1;
  repeated google.protobuf.Any annotations = 2;
}
